package br.com.diosantander.classes;

public class AparelhoTelefonico {
    public void ligar(String numero) {
        System.out.println("Ligando para alguem");
    }

    public void atender() {
        System.out.println("Atendenddo a ligação");
    }

    public void iniciarCorreioDeVoz() {
        System.out.println("Inicializando Correio de voz");
    }
}
