package br.com.diosantander.classes;

public class NavegandoNaInternet extends ReprodutorMusical{
    public void exibirPagina(String url) {
        System.out.println("Exibindo pagina");
    }

    public void adicionarNovaAba() {
        System.out.println("Adicionando nova aba");
    }

    public void atualizarPagina() {
        System.out.println("Atualizando página");
    }

}
